src/style.css
@font-face {
  font-family: "Departure Mono";
  src: url("../assets/DepartureMono-Regular.woff2") format("woff2");
}
body {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100dvh;
  margin: 0;
  background-color: #151515;
}
main *,
main *::before,
main *::after {
  font-family: "Departure Mono", monospace;
  font-size: 3cqw;
}
main {
  container: main / size;
  position: relative;
  background-color: #4d4;
  margin-top: 2cqw;
  font-size: 1cqw;
}
canvas {
  display: block;
  width: 100cqw;
  height: 100cqh;
}
button,
.button {
  color: #09cdda;
  background-color: #333;
  outline: none;
}
dialog {
  background: #333;
  color: #09cdda;
}
button,
dialog,
.button {
  border: 0.5cqw solid #09cdda;
}
.button {
  text-align: center;
}
#avatar dialog {
  padding: 2cqw;
}
#menu_inner {
  display: flex;
  gap: 3cqw;
}
#menu_content {
  display: flex;
  flex-direction: column;
  gap: 1cqw;
}
#menu_button {
  position: absolute;
  top: 1cqw;
  right: 1cqw;
  width: 4cqw;
  height: 4cqw;
  padding: 0;
  display: flex;
  justify-content: center;
  font-size: 3cqw;
  line-height: 2.3cqw;
}
#avatar_settings {
  display: flex;
  flex-direction: column;
  gap: 1cqw;
}
#player_avatar {
  position: absolute;
  top: 1cqw;
  left: 1cqw;
  width: 20cqw;
  height: 20cqw;
  overflow: hidden;
  border: 0.5cqw solid #09cdda;
}
body:not([data-game-state="playing"]) {
  #menu_button,
  #player_avatar {
    display: none;
  }
}
body[data-camera="off"] #camera_freeze_button {
  display: none;
}
#avatar_canvas {
  width: 100%;
  height: 100%;
  image-rendering: pixelated;
  /*transform-origin: 60% 25%;*/
}
#avatar_settings_preview {
  width: 30cqw;
  height: 30cqw;
  overflow: hidden;
  border: 0.5cqw solid #09cdda;
}
#avatar_settings_controls {
  display: flex;
  justify-content: space-between;
  gap: 1cqw;
}
#avatar_settings_controls button {
  flex: 1;
  padding: 0;
}
#avatar_file_label {
  user-select: none;
  -webkit-user-select: none;
}

